[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buzur"
version = "1.0.1"
description = "AI prompt injection defense scanner for agents. 19 phases covering HTML obfuscation, encoding attacks, semantic similarity, behavioral anomaly detection, multi-step attack chains, and more."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "SummSolutions" }
]
keywords = [
  "ai", "security", "prompt-injection", "llm", "agent", "defense", "scanner", "mcp", "jailbreak", "evasion"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
image = ["exifread>=3.0", "Pillow>=9.0", "pyzbar>=0.1.9"]
embeddings = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/SummSolutions/buzur-python"
Repository = "https://github.com/SummSolutions/buzur-python"
"Bug Tracker" = "https://github.com/SummSolutions/buzur-python/issues"
"JS Version" = "https://github.com/SummSolutions/buzur"
"SummSolutions" = "https://summsolutions.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["buzur*"]